--- a/template/binbol-apis/src/main/resources/application.properties
+++ b/template/binbol-apis/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/default_tenant?useUnicode=true
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=admin
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
